# loot

./: .clang-format  .eslintrc.yml  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .runsettings  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  File Format  LOOT Translation From English To Czech.mo  README  README.md  appveyor.yml  bootstrap.cmd  bower.json  gruntfile.js  install-step.travis.sh  karma.conf.js  mingw-toolchain.cmake  mingw32-toolchain.cmake  package-lock.json  package.json  resource.rc  tsconfig.eslint.json  tsconfig.json  webpack.config.js
.devcontainer/linux/: Dockerfile  devcontainer.json
.devcontainer/mingw.shared/: Dockerfile  devcontainer.json  initialize.sh  install_inno_setup.sh  post_create.sh
.devcontainer/mingw.static/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  mnemonics.yml  release.yml
cmake/: ogdf-chrono.patch  tests.cmake  toolchain-mingw64.cmake  toolchain-mingw64.static.cmake
docs/: BOSS API Readme.html  BOSS Metadata File Syntax.html  BOSS Metadata Syntax.html  BOSS Readme.html  BUILD.LINUX.md  BUILD.MSVC.md  BUILD.MinGW.md  Doxyfile  LOOT Metadata Syntax.html  LOOT Readme.html  Licenses.txt  api_index.dox  conf.py  index.rst  pyproject.toml  requirements.txt
docs/api/: Doxyfile  README.md  changelog.rst  conf.py  credits.rst  history.rst  index.rst  introduction.rst  miscellaneous.rst  reference.rst  requirements.txt  sorting.rst
docs/app/: changelog.rst  contributing.rst  credits.rst  installation.rst  introduction.rst  modauthors.rst  sorting.rst  theme.rst
docs/app/usage/: editor.rst  groups_editor.rst  initialisation.rst  main.rst  plugin_editor.rst  (+1 more)
docs/licenses/: Apache License v2.0.txt  BSD License (github-api).txt  GNU FDL v1.3.txt  GNU GPL v2 (libgit2).txt  GNU GPL v3.txt  Licenses.txt  MIT License (Jed Gettext Parser).txt  MIT License (Jed).txt  MIT License (Pseudosem).txt  MIT License (PugiXML).txt  MIT License (ValveFileVDF).txt  MIT License (spdlog).txt  notice.rst  texts.rst
docs/metadata/: changelog.rst  conditions.rst  file_structure.rst  introduction.rst
examples/: masterlist.yaml  script.js  settings.yaml  style.css
examples/masterlists/: nehrim.yaml
examples/resource/: polyfill.js  script.js  style.css
games/nehrim/: masterlist.yaml
include/loot/: api.h  api_decorator.h  database_interface.h  error.h  error_categories.h  game_interface.h  game_type.h  language.h  language_code.h  loot_version.h  masterlist_info.h  message_type.h  plugin_cleanliness.h  plugin_interface.h  plugin_message.h  plugin_tags.h  simple_message.h  windows_encoding_converters.h
resources/: DOM-shim-ie8.js  icon.xcf  libespm.yaml  resources.qrc  resources.windows.qrc  script.js  settings.yaml  style.css
resources/l10n/: template.pot
resources/linux/: flatpak-builder-lint-exceptions.json  io.github.loot.loot.desktop  io.github.loot.loot.metainfo.xml  io.github.loot.loot.yml
resources/masterlist/: starfield.yaml
resources/report/: bower.json  data.js  polyfill.js  report.html  script.js  style.css  testdata.js
resources/themes/: dark.palette.toml  dark.theme.qss  default-dark-fusion-windows.theme.qss  default-dark-windows.theme.qss  default-dark-windows11.theme.qss  default-dark.theme.qss  default-light.theme.qss  default.theme.qss
scripts/: archive.js  archive.py  build_flatpak.sh  build_installer.ps1  build_ui.js  create_ico.js  download_file.ps1  generate_manifests.sh  get_roboto_files.js  helpers.js  install-step.travis.sh  installer.iss  po_to_mo.py  potomo.js  prepare_installer.ps1  replace_libstdc++.sh  replace_mingw_dlls.sh  requirements.txt  set_version_number.js  set_version_number.py  update_masterlist_branches.ps1  validate_mnemonics.py  vulcanize.config.json  vulcanize.js  xgettext.babel.json
scripts/appveyor/: build_installer.ps1  delete_old_artifacts.ps1  deploy_docs.ps1  install_boost.ps1  update_masterlist_branches.ps1
scripts/cmake/: CEF_CMakeLists.txt  configure_cef.cmake
scripts/git/: pre-commit
scripts/linux/: prepare_ubuntu_precise.sh
scripts/travis/: install_boost.sh  loot-api.bintray.json  loot.bintray.json  metadata-validator.bintray.json
src/: VersionRegex.cpp  VersionRegex.h  api.cpp  api.h  archive.py  converter.cpp  error.h  game.cpp  game.h  generators.h  globals.h  helpers.cpp  helpers.h  installer.iss  installer.nsi  legacy.py  metadata.cpp  metadata.h  network.h  parsers.h  plugindata.cpp  plugindata.h  resource.rc  sorting.h  tester.cpp
src/api/: _loot_db_int.h  api.cpp  api.h  api_database.cpp  api_database.h  error_categories.cpp  game.cpp  game.h  loot_db.cpp  loot_db.h  masterlist.cpp  masterlist.h  metadata_list.cpp  metadata_list.h  resource.rc
src/backend/: error.h  error_categories.cpp  game.cpp  game.h  game_settings.cpp  game_settings.h  generators.cpp  generators.h  git.cpp  globals.cpp  globals.cpp.in  globals.h  graph.cpp  graph.h  helpers.cpp  helpers.h  json.h  language.cpp  language.h  legacy-generator.h  legacy-parser.h  masterlist.cpp  masterlist.h  metadata.cpp  metadata.h  metadata_list.cpp  metadata_list.h  network.cpp  network.h  parsers.h  plugin.cpp  plugin.h  plugin_loader.cpp  plugin_loader.h  plugin_sorter.cpp  plugin_sorter.h  sort.cpp  streams.h  version.cpp  version.h  (+1 more)
src/gui/: LOOT.exe.manifest  LOOT.manifest  app.cpp  app.h  application_mutex.h  backup.cpp  backup.h  editor.cpp  editor.h  editor_message.h  handler.cpp  handler.h  helpers.cpp  helpers.h  ids.cpp  ids.h  loot_app.cpp  loot_app.h  loot_handler.cpp  loot_handler.h  loot_scheme_handler_factory.cpp  loot_scheme_handler_factory.h  loot_settings.cpp  loot_settings.h  loot_state.cpp  loot_state.h  main.cpp  main.h  main_win.cpp  misc.cpp  misc.h  plugin_item.cpp  plugin_item.h  query_handler.cpp  query_handler.h  resource.h  resource.rc  scheme.cpp  scheme.h  settings.cpp  (+14 more)
src/plugin/: ModFormat.cpp  ModFormat.h  Types.h
src/schema/: metadata.proto  query.proto  request.proto  response.proto
src/tests/: base_game_test.h  common_game_test_fixture.h  fixtures.h  main.cpp  printers.h
src/validator/: main.cpp
(+751 files in other folders)
